manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    control-plane: controller-manager
  name: image-cloner-controller
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: controller-manager
  template:
    metadata:
      labels:
        control-plane: controller-manager
    spec:
      containers:
        - args:
          - --secure-listen-address=0.0.0.0:8443
          - --upstream=http://127.0.0.1:8080/
          - --logtostderr=true
          - --v=10
          image: gcr.io/kubebuilder/kube-rbac-proxy:v0.5.0
          name: kube-rbac-proxy
          ports:
          - containerPort: 8443
            name: https
        - args:
              - --metrics-addr=127.0.0.1:8080
              - --enable-leader-election
              - --tls-cert-file=/certs/tls.crt
              - --tls-private-key-file=/certs/tls.key
          command:
              - /manager
          image: quay.io/cargaona/image-cloner-controller:v0.1
          imagePullPolicy: Always
          name: manager
          resources:
            limits:
              cpu: 100m
              memory: 30Mi
            requests:
              cpu: 100m
              memory: 20Mi
          volumeMounts:
            - mountPath: /root/.docker/
              name: docker-configuration-volume
            - mountPath: /tmp/k8s-webhook-server/serving-certs/
              name: certs
      volumes:
        - name: docker-configuration-volume
          configMap:
            name: docker-configuration
        - name: certs
          secret:
            secretName: webhook-certs
      terminationGracePeriodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: image-cloner
spec:
  ports:
    - name: webhook
      port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    control-plane: controller-manager
---
