manifests/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
  - name: "validating-deployment.image-cloner.io"
    namespaceSelector:
      matchExpressions:
        - key: validate-backups.image-cloner.io
          operator: NotIn
          values: ["disable"]
    rules:
      - apiGroups:   ["*"]
        apiVersions: ["*"]
        operations:  ["UPDATE"]
        resources:   ["deployments"]
        scope:       "Namespaced"
    clientConfig:
      service:
        namespace: default
        name: image-cloner
        path: /validate-deployment
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR4RENDQXF5Z0F3SUJBZ0lVRlBzR0VvaU9FaDBHbS9iWWVJNmh3UG1PL25Zd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2FERUxNQWtHQTFVRUJoTUNWVk14RHpBTkJnTlZCQWdUQms5eVpXZHZiakVSTUE4R0ExVUVCeE1JVUc5eQpkR3hoYm1ReEV6QVJCZ05WQkFvVENrdDFZbVZ5Ym1WMFpYTXhDekFKQmdOVkJBc1RBa05CTVJNd0VRWURWUVFECkV3cExkV0psY201bGRHVnpNQjRYRFRJeE1ERXpNREUwTURnd01Gb1hEVEkyTURFeU9URTBNRGd3TUZvd2FERUwKTUFrR0ExVUVCaE1DVlZNeER6QU5CZ05WQkFnVEJrOXlaV2R2YmpFUk1BOEdBMVVFQnhNSVVHOXlkR3hoYm1ReApFekFSQmdOVkJB [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-daemonset
webhooks:
  - name: "validating-daemonset.image-cloner.io"
    namespaceSelector:
      matchExpressions:
        - key: validate-backups.image-cloner.io
          operator: NotIn
          values: ["disable"]
    rules:
      - apiGroups:   ["*"]
        apiVersions: ["*"]
        operations:  ["UPDATE"]
        resources:   ["daemonset"]
        scope:       "Namespaced"
    clientConfig:
      service:
        namespace: default
        name: image-cloner
        path: /validate-deployment
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR4RENDQXF5Z0F3SUJBZ0lVRlBzR0VvaU9FaDBHbS9iWWVJNmh3UG1PL25Zd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2FERUxNQWtHQTFVRUJoTUNWVk14RHpBTkJnTlZCQWdUQms5eVpXZHZiakVSTUE4R0ExVUVCeE1JVUc5eQpkR3hoYm1ReEV6QVJCZ05WQkFvVENrdDFZbVZ5Ym1WMFpYTXhDekFKQmdOVkJBc1RBa05CTVJNd0VRWURWUVFECkV3cExkV0psY201bGRHVnpNQjRYRFRJeE1ERXpNREUwTURnd01Gb1hEVEkyTURFeU9URTBNRGd3TUZvd2FERUwKTUFrR0ExVUVCaE1DVlZNeER6QU5CZ05WQkFnVEJrOXlaV2R2YmpFUk1BOEdBMVVFQnhNSVVHOXlkR3hoYm1ReApFekFSQmdOVkJB [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
